Reverting a previous CSS fixes attempt which caused an over stretching hero section and thus an undesirable horizontal scroll bar

--- a/css/main.sass
+++ b/css/main.sass
@@ -220,8 +220,8 @@ div#bg_img
 // The hero section
 
 section#hero
-  width: 100vw
-  height: 100vh
+  width: 100%
+  height: 100%
   display: -webkit-box
 
   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
